src/test/custom/invalid/struct/structElemUndelcare.wacc
# Output:
# #semantic error#

# Program:

begin
  struct a is {int b}
  a x = new a {1};
  println a.c
end